[gd_scene load_steps=2 format=2]

[ext_resource path="res://Pause/Pause.gd" type="Script" id=1]

[node name="Pause" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_right = 100.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 220.0
margin_right = 200.0
margin_bottom = 240.0
text = "Resume"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 290.0
margin_right = 200.0
margin_bottom = 310.0
text = "Quit"

[node name="QuitDesktopButton2" type="Button" parent="Control/VBoxContainer"]
margin_top = 360.0
margin_right = 200.0
margin_bottom = 380.0
text = "Quit to Desktop"
[connection signal="pressed" from="Control/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitDesktopButton2" to="." method="_on_QuitDesktopButton2_pressed"]
